--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -4,3 +4,9 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.router-link-active,
+.router-link-exact-active{
+    border-bottom: 1px solid blue;
+    color: blue;
+}
